fix pull out menus clipping out of viewport when the window is very elongated

--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -211,7 +211,7 @@ dialog::backdrop{
 }
 .pullsOpen:is(:hover, :focus-within) div{
     width: 100%;
-    height: 50vh;
+    height: 40vw;
     visibility: visible;
     opacity: 1;
 }
